--- a/config/database.yml
+++ b/config/database.yml
@@ -13,15 +13,15 @@ default: &default
 
 development:
   <<: *default
-  database: pollapp_development
+  database: insight_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: pollapp_test
+  database: insight_test
 
 production:
   <<: *default
-  database: pollapp_production
+  database: insight_production
