get data after visualization page ready

--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,7 @@ default: &default
 
 development:
   <<: *default
+  host: localhost
   database: insight_development
 
 # Warning: The database defined as "test" will be erased and
